# pico-midi-serial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  source.c  source.h  tusb_config.h  usb_descriptors.c
